--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
+  <!-- <base href="/"> -->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="C++ quiz..">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="C++ is had!">
+  <meta name="apple-mobile-web-app-title" content="C++ is hard!">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.png"/>
   <link rel="icon" type="image/x-icon" href="favicon.png"/>
 
-  <title>C++ is had!</title>
+  <title>C++ is hard!</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
