hopefully fixed icon

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.png"/>
-  <link rel="icon" type="image/x-icon" href="favicon.png"/>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+  <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 
   <title>C++ is hard!</title>
   <link rel="manifest" href="manifest.json">
